environments/gloo-edge/gateway-api/with-istio/client-app/base/not-in-mesh-client.yaml
apiVersion: v1
kind: Service
metadata:
  name: not-in-mesh-client
  namespace: client
  labels:
    app: not-in-mesh-client
spec:
  ports:
  - port: 5000
    name: http
  selector:
    name: not-in-mesh-client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: not-in-mesh-client-deployment
  namespace: client
  labels:
    app: not-in-mesh-client
spec:
  replicas: 1
  selector:
    matchLabels:
      name: not-in-mesh-client
  template:
    metadata:
      labels:
        name: not-in-mesh-client
    spec:
      serviceAccountName: not-in-mesh-client
      containers:
      - name: not-in-mesh-client
        image: ably77/curl-ui:0.7.3
        ports:
        - containerPort: 5000
